# hypersync

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: coverage.yml  docs.yml  test.yml
docs/: api.rst  conf.py  getting-started.rst  index.rst  sg_execution_times.rst
examples/: README.rst
examples/simulate/: README.rst  plot_simulation.py
examples/states/: README.rst  plot_2_cluster.py  plot_2_twisted.py  plot_splay.py  plot_sync.py
examples/visualize/: README.rst  plot_phases_plots.py  plot_phases_ring.py  plot_summary_panel.py  plot_sync_panel.py
hypersync/: __init__.py
hypersync/analysis/: __init__.py  identify.py
hypersync/drawing/: __init__.py  draw.py
hypersync/simulation/: __init__.py  generate.py  integrate.py  ode_rhs.py
hypersynchronization/: __init__.py
hypersynchronization/analysis/: identify.py
hypersynchronization/drawing/: draw.py
hypersynchronization/simulation/: generate.py
requirements/: default.txt
tests/: conftest.py
tests/analysis/: test_identify.py
tests/simulations/: test_generate.py  test_integrate.py  test_ode_rhs.py
