[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hypersync"
version = "0.1"
description = "HyperSync is Python for the simulation, analysis, and visualization of the synchronisations of oscillators with group (higher-order) interactions."
authors = [
  { name = "Maxime Lucas", email = "maxime.lucas.work@gmail.com" },
]
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "pandas>=1.3",
    "networkx>=2.7",
    "requests>=2.0",
    "matplotlib>=3.4",
    "xgi>=0.7.2",
    "seaborn>=0.12",
    "numba>=0.58",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
]
dev = [
    "black[jupyter]==22.3.0",
    "isort==5.10.1",
    "pre-commit>=2.12",
    "pylint>=2.10",
]
doc = [
    "sphinx~=6.0",
    "sphinx-copybutton",
    "sphinx-rtd-theme>=1.2",
    "sphinx-design",
    "numpydoc>=1.1",
    "pillow>=8.2",
    "matplotlib>=3.3",
]
