[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hypersynchronization"
version = "0.1"
description = "hypersynchronization is a Python library for the simulation, analysis, and visualization of synchronization in oscillators with higher-order interactions."
authors = [
  { name = "Maxime Lucas", email = "maxime.lucas.work@gmail.com" },
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["synchronization", "kuramoto", "higher-order interactions", "hypergraph", "complex systems"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "matplotlib>=3.4",
    "xgi>=0.7.2",
    "seaborn>=0.12",
    "numba>=0.59",
]

[project.urls]
Homepage = "https://github.com/maximelucas/hypersynchronization"
Repository = "https://github.com/maximelucas/hypersynchronization"
Issues = "https://github.com/maximelucas/hypersynchronization/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
]
dev = [
    "black[jupyter]>=24.0",
    "isort>=5.10",
    "pre-commit>=2.12",
    "pylint>=2.10",
]
doc = [
    "sphinx~=6.0",
    "sphinx-copybutton",
    "sphinx-rtd-theme>=1.2",
    "sphinx-design",
    "numpydoc>=1.1",
    "pillow>=8.2",
    "matplotlib>=3.3",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
